fix(css): removed the global content widh on `p` tag to fix the horizontal scroll problem in news component globally

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,7 +79,6 @@ ol,
 li {
     margin-left: auto;
     margin-right: auto;
-    width: var(--content-width);
 }
 
 p:has(img) {
